# qa_system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: squad_loader.py
deployment/: app.py
evaluation/: evaluate_predictions.py  generate_rag_predictions.py  generate_reader_predictions.py
models/: __init__.py  base_inference.py  finetune.py  t5_inference.py  upload_to_hub.py
retrievers/: __init__.py  base.py  chroma.py  dense.py  hybrid.py  sparse.py
